Make stats return over http endpoint.

--- a/backend/config/haproxy.cfg
+++ b/backend/config/haproxy.cfg
@@ -1,33 +1,46 @@
+#----------------- START required config for haproxui -----------------#
+
 global
-   lua-load socket-forward.lua
-   lua-load stats.lua
+# Create an admin level socket that can be used
+# to query and modify the haproxy configuration.
    stats socket /var/run/haproxy.sock mode 600 level admin
+
+# this socket is opened for testing purposes, but
+# is not required for the haproxui support.
+   stats socket 0.0.0.0:10002 mode 600 level admin
    stats timeout 2m
 
+# load the lua socket forwarder, this is where the magic happens
+   lua-load stats.lua
+
+# Load the socket command lua script to process http requests.
+# THIS NEEDS TO HAVE A FIREWALL OR OTHER ACCESS CONTROL IN FRONT OF IT
+# A good method to protect this is to bind *only* to 127.0.0.1, and then
+# use ssh tunneling from the machine where you want to use haproxui.
 frontend stats_socket
     timeout client      100s
     mode http
     bind :10001
-    http-request use-service lua.stats
+    http-request use-service lua.socket_command
 
+#------------------ END required config for haproxui ------------------#
+
+#------------------ START example configs ------------------#
+
+# This is an example forward to example.com it's here just for kicks.
 listen example_forward
     mode http
     bind :10000
-    server server1 example.com
+    server server1 example.com:80
 
-# listen  stats
-#     bind  127.0.0.1:10005
-#     mode            http
-#     log             global
+# This is the default stats view. Also just an example.
+listen stats
+    bind  127.0.0.1:10005
+    mode            http
+    log             global
 
-#     maxconn 10
-
-#     timeout client      100s
-#     timeout server      100s
-#     timeout connect      100s
-#     timeout queue   100s
-
-#     stats enable
-#     stats refresh 30s
-#     stats show-node
-#     stats uri  /stats
+    stats enable
+    stats refresh 30s
+    stats show-node
+    stats uri  /stats
+#------------------- END example configs -------------------#
