--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM haproxy
 EXPOSE 10000
 EXPOSE 10001
+EXPOSE 10002
 COPY haproxy.sh /usr/bin/haproxy.sh
 VOLUME /var/haproxy
 CMD ["/usr/bin/haproxy.sh"]
