--- a/backend/config/haproxy.cfg
+++ b/backend/config/haproxy.cfg
@@ -8,7 +8,6 @@ global
 # this socket is opened for testing purposes, but
 # is not required for the haproxui support.
    stats socket 0.0.0.0:10002 mode 600 level admin
-   stats timeout 2m
 
 # load the lua socket forwarder, this is where the magic happens
    lua-load stats.lua
@@ -35,12 +34,13 @@ listen example_forward
 
 # This is the default stats view. Also just an example.
 listen stats
-    bind  127.0.0.1:10005
+    bind  0.0.0.0:10002
     mode            http
     log             global
 
     stats enable
-    stats refresh 30s
+    stats refresh 5s
     stats show-node
+    stats show-legends
     stats uri  /stats
 #------------------- END example configs -------------------#
