Adding backend metadata endpoint.

--- a/backend/config/haproxy.cfg
+++ b/backend/config/haproxy.cfg
@@ -7,10 +7,10 @@ global
 
 # this socket is opened for testing purposes, but
 # is not required for the haproxui support.
-   stats socket 0.0.0.0:10002 mode 600 level admin
+   stats socket 0.0.0.0:9999 mode 600 level admin
 
 # load the lua socket forwarder, this is where the magic happens
-   lua-load stats.lua
+   lua-load instance_manager.lua
 
 # Load the socket command lua script to process http requests.
 # THIS NEEDS TO HAVE A FIREWALL OR OTHER ACCESS CONTROL IN FRONT OF IT
@@ -19,8 +19,8 @@ global
 frontend stats_socket
     timeout client      100s
     mode http
-    bind :10001
-    http-request use-service lua.socket_command
+    bind :10000
+    http-request use-service lua.instance_manager
 
 #------------------ END required config for haproxui ------------------#
 
@@ -29,7 +29,7 @@ frontend stats_socket
 # This is an example forward to example.com it's here just for kicks.
 listen example_forward
     mode http
-    bind :10000
+    bind :10001
     server server1 example.com:80
 
 # This is the default stats view. Also just an example.
