--- a/frontend/package.json
+++ b/frontend/package.json
@@ -241,6 +241,7 @@
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
     "styled-components": "2.0.0",
+    "typescript": "^2.6.2",
     "warning": "3.0.0",
     "whatwg-fetch": "2.0.3"
   },
@@ -292,6 +293,7 @@
     "rimraf": "2.6.1",
     "shelljs": "0.7.7",
     "style-loader": "0.18.1",
+    "ts-loader": "^3.2.0",
     "url-loader": "0.5.8",
     "webpack": "3.5.5",
     "webpack-dev-middleware": "1.11.0",
