--- a/frontend/package.json
+++ b/frontend/package.json
@@ -212,6 +212,7 @@
     "testRegex": "tests/.*\\.test\\.js$"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-polyfill": "6.23.0",
     "chalk": "1.1.3",
     "compression": "1.6.2",
@@ -294,6 +295,7 @@
     "shelljs": "0.7.7",
     "style-loader": "0.18.1",
     "ts-loader": "^3.2.0",
+    "tslint": "^5.8.0",
     "url-loader": "0.5.8",
     "webpack": "3.5.5",
     "webpack-dev-middleware": "1.11.0",
