--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "noImplicitAny": true,
+    "noImplicitAny": false,
+    "moduleResolution": "node",
     "module": "es6",
     "target": "es6",
     "jsx": "react",
