--- a/backend/config/haproxy.cfg
+++ b/backend/config/haproxy.cfg
@@ -1,4 +1,8 @@
 #----------------- START required config for haproxui -----------------#
+defaults
+    timeout client 10s
+    timeout server 10s
+    timeout connect 10s
 
 global
 # Create an admin level socket that can be used
@@ -13,11 +17,10 @@ global
    lua-load instance_manager.lua
 
 # Load the socket command lua script to process http requests.
-# THIS NEEDS TO HAVE A FIREWALL OR OTHER ACCESS CONTROL IN FRONT OF IT
+# THIS NEEDS TO HAVE A FIREWALL OR OTHER ACCESS CONTROL IN FRONT OF IT!
 # A good method to protect this is to bind *only* to 127.0.0.1, and then
 # use ssh tunneling from the machine where you want to use haproxui.
 frontend stats_socket
-    timeout client      100s
     mode http
     bind :10000
     http-request use-service lua.instance_manager
@@ -26,15 +29,30 @@ frontend stats_socket
 
 #------------------ START example configs ------------------#
 
-# This is an example forward to example.com it's here just for kicks.
-listen example_forward
+# These are example configs to example.com so that
+# we have something to look at in our interfaces.
+listen example_forward_listener
     mode http
     bind :10001
-    server server1 example.com:80
+    http-request set-header Host example.com
+    server server1 example.com:80 check
+    server server2 example.com:80 backup check
 
-# This is the default stats view. Also just an example.
+frontend example_forward_frontend
+    mode http
+    bind :10002
+    default_backend backend_servers
+
+backend backend_servers
+    mode http
+    http-request set-header Host example.com
+    server server1 not-real.127.0.0.1.xip.io:80 check
+    server server2 example.com:80 backup check
+
+# This is the default stats view, so that we can see
+# what is reported in the normal stats view.
 listen stats
-    bind  0.0.0.0:10002
+    bind  0.0.0.0:10003
     mode            http
     log             global
 
@@ -42,5 +60,5 @@ listen stats
     stats refresh 5s
     stats show-node
     stats show-legends
-    stats uri  /stats
+    stats uri  /
 #------------------- END example configs -------------------#
