Well, lots of HAProxy health checks can break docker, because docker. Limit how many of those checks we actually do.

--- a/backend/config/haproxy.cfg
+++ b/backend/config/haproxy.cfg
@@ -20,7 +20,7 @@ global
 # THIS NEEDS TO HAVE A FIREWALL OR OTHER ACCESS CONTROL IN FRONT OF IT!
 # A good method to protect this is to bind *only* to 127.0.0.1, and then
 # use ssh tunneling from the machine where you want to use haproxui.
-frontend stats_socket
+frontend stats_over_http
     mode http
     bind :10000
     http-request use-service lua.instance_manager
@@ -35,8 +35,8 @@ listen example_forward_listener
     mode http
     bind :10001
     http-request set-header Host example.com
-    server server1 example.com:80 check
-    server server2 example.com:80 backup check
+    server server1 example.com:80
+    server server2 example.com:80 backup
 
 frontend example_forward_frontend
     mode http
@@ -46,8 +46,8 @@ frontend example_forward_frontend
 backend backend_servers
     mode http
     http-request set-header Host example.com
-    server server1 not-real.127.0.0.1.xip.io:80 check
-    server server2 example.com:80 backup check
+    server server1 not-real.127.0.0.1.xip.io:80 check inter 100000
+    server server2 example.com:80 backup
 
 # This is the default stats view, so that we can see
 # what is reported in the normal stats view.
