Re-org HAProxy classes to match haproxy primitives.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -227,6 +227,7 @@
     "ip": "1.1.5",
     "lodash": "4.17.4",
     "minimist": "1.2.0",
+    "papaparse": "^4.3.6",
     "prop-types": "15.5.10",
     "react": "15.6.1",
     "react-dom": "15.6.1",
@@ -248,6 +249,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
+    "@types/papaparse": "^4.1.33",
     "add-asset-html-webpack-plugin": "2.0.1",
     "babel-cli": "6.24.1",
     "babel-core": "6.24.1",
