--- a/frontend/package.json
+++ b/frontend/package.json
@@ -214,10 +214,12 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-polyfill": "6.23.0",
+    "bootstrap": "^4.0.0-beta.3",
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "5.0.0",
     "express": "4.15.3",
+    "font-awesome": "^4.7.0",
     "fontfaceobserver": "2.0.9",
     "history": "4.6.3",
     "hoist-non-react-statics": "2.1.1",
@@ -225,9 +227,11 @@
     "intl": "1.2.5",
     "invariant": "2.2.2",
     "ip": "1.1.5",
+    "jquery": "^3.2.1",
     "lodash": "4.17.4",
     "minimist": "1.2.0",
     "papaparse": "^4.3.6",
+    "popper.js": "^1.12.9",
     "prop-types": "15.5.10",
     "react": "15.6.1",
     "react-dom": "15.6.1",
