--- a/frontend/package.json
+++ b/frontend/package.json
@@ -212,6 +212,7 @@
     "testRegex": "tests/.*\\.test\\.js$"
   },
   "dependencies": {
+    "@types/react": "^16.0.34",
     "axios": "^0.17.1",
     "babel-polyfill": "6.23.0",
     "bootstrap": "^4.0.0-beta.3",
