Add a timeout for haproxy stats requests. Fix typo in lua script.

--- a/backend/config/haproxy.cfg
+++ b/backend/config/haproxy.cfg
@@ -8,6 +8,7 @@ global
 # Create an admin level socket that can be used
 # to query and modify the haproxy configuration.
    stats socket /var/run/haproxy.sock mode 600 level admin
+   stats timeout 2m
 
 # this socket is opened for testing purposes, but
 # is not required for the haproxui support.
