--- a/backend/config/haproxy.cfg
+++ b/backend/config/haproxy.cfg
@@ -5,16 +5,6 @@ defaults
     timeout connect 10s
 
 global
-# Create an admin level socket that can be used
-# to query and modify the haproxy configuration.
-   stats socket /var/run/haproxy.sock mode 600 level admin
-   stats timeout 2m
-
-# this socket is opened for testing purposes, but
-# is not required for the haproxui support.
-   stats socket 0.0.0.0:9999 mode 600 level admin
-
-# load the lua socket forwarder, this is where the magic happens
    lua-load instance_manager.lua
 
 # Load the socket command lua script to process http requests.
@@ -24,6 +14,7 @@ global
 frontend stats_over_http
     mode http
     bind :10000
+    filter compression
     http-request use-service lua.instance_manager
 
 #------------------ END required config for haproxui ------------------#
@@ -56,7 +47,6 @@ listen stats
     bind  0.0.0.0:10003
     mode            http
     log             global
-
     stats enable
     stats refresh 5s
     stats show-node
