--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ python: 3.7
 node_js:
 - node
 before_install:
+- python3 -m venv py3
+- source py3/bin/activate
 - cd frontend
 install:
-- python -m pip install --upgrade pip setuptools wheel
 - pip install awscli --upgrade
 - npm install -g yarn
 - yarn install
