--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,7 @@ python: 3.7
 node_js:
 - node
 before_install:
-- apt-get install python3-venv
-- python3 -m venv py3
-- source py3/bin/activate
+- pip install requests[security]
 - cd frontend
 install:
 - pip install awscli --upgrade
