Require auth in the dev mode.

--- a/backend/config/haproxy.cfg
+++ b/backend/config/haproxy.cfg
@@ -7,6 +7,9 @@ defaults
 global
    lua-load instance_manager.lua
 
+userlist stats_over_http_users
+  user admin insecure-password testing
+
 # Load the socket command lua script to process http requests.
 # THIS NEEDS TO HAVE A FIREWALL OR OTHER ACCESS CONTROL IN FRONT OF IT!
 # A good method to protect this is to bind *only* to 127.0.0.1, and then
@@ -14,8 +17,8 @@ global
 frontend stats_over_http
     mode http
     bind :10000
-    filter compression
-    http-request use-service lua.instance_manager
+    acl auth_confirmed http_auth(stats_over_http_users)
+    http-request use-service lua.instance_manager if auth_confirmed OR METH_OPTIONS
 
 #------------------ END required config for haproxui ------------------#
 
