Back to using only cloudfront, and allow interface to load through lua.

--- a/backend/config/haproxy.cfg
+++ b/backend/config/haproxy.cfg
@@ -14,11 +14,15 @@ userlist stats_over_http_users
 # THIS NEEDS TO HAVE A FIREWALL OR OTHER ACCESS CONTROL IN FRONT OF IT!
 # A good method to protect this is to bind *only* to 127.0.0.1, and then
 # use ssh tunneling from the machine where you want to use haproxui.
-frontend stats_over_http
+listen stats_over_http
     mode http
     bind :10000
-    acl auth_confirmed http_auth(stats_over_http_users)
-    http-request use-service lua.instance_manager if auth_confirmed OR METH_OPTIONS
+    acl authenticated http_auth(stats_over_http_users)
+    acl lua_handling path_beg /api
+    http-request deny unless lua_handling authenticated || lua_handling METH_OPTIONS || !lua_handling
+    http-request use-service lua.instance_manager if lua_handling
+    http-request set-header Host hydra.wildbit.com
+    server assets hydra.wildbit.com:443 check-sni str(hydra.wildbit.com) sni str(hydra.wildbit.com) ssl verify none
 
 #------------------ END required config for haproxui ------------------#
 
