Better config options for testing stats statuses.

--- a/backend/config/haproxy.cfg
+++ b/backend/config/haproxy.cfg
@@ -60,8 +60,8 @@ listen stats
     mode            http
     log             global
     stats enable
-    stats refresh 5s
     stats show-node
     stats show-legends
+    stats admin if TRUE
     stats uri  /
 #------------------- END example configs -------------------#
