--- a/frontend/package.json
+++ b/frontend/package.json
@@ -231,8 +231,8 @@
     "jquery": "^3.2.1",
     "lodash": "4.17.4",
     "minimist": "1.2.0",
-    "papaparse": "^4.3.6",
     "popper.js": "^1.12.9",
+    "project-name-generator": "^2.1.4",
     "prop-types": "15.5.10",
     "rc-slider": "^8.6.0",
     "react": "15.6.1",
@@ -275,6 +275,7 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "circular-dependency-plugin": "3.0.0",
+    "copy-webpack-plugin": "^4.3.1",
     "coveralls": "2.13.1",
     "css-loader": "0.28.4",
     "enzyme": "2.8.2",
