Add some CORS headers so things work in Safari.

--- a/backend/config/haproxy.cfg
+++ b/backend/config/haproxy.cfg
@@ -25,6 +25,10 @@ listen hydra_ui
     acl lua_handling path_beg /api
     http-request deny unless lua_handling authenticated || lua_handling METH_OPTIONS || !lua_handling
     http-request use-service lua.instance_manager if lua_handling
+    http-response set-header Allow-Origin *
+    http-response set-header Access-Control-Allow-Headers "Authorization, Content-Type, Accept"
+    http-response set-header Access-Control-Allow-Methods "POST, GET, OPTIONS"
+    
     http-request cache-use hydra_ui_cache
     http-request set-header Host hydra.wildbit.com
     server assets hydra.wildbit.com:443 check-sni str(hydra.wildbit.com) sni str(hydra.wildbit.com) ssl verify none
