--- a/frontend/app/manifest.json
+++ b/frontend/app/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "react boilerplate",
+  "name": "Hydra",
   "theme_color": "#b1624d",
   "background_color": "#fafafa",
   "display": "standalone",
