Autofills HAProxy instance name based on url

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -278,7 +278,6 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-react": "7.0.1",
-    "eslint-plugin-redux-saga": "0.3.0",
     "eventsource-polyfill": "0.9.6",
     "exports-loader": "0.6.4",
     "file-loader": "0.11.1",
@@ -296,6 +295,7 @@
     "plop": "1.8.0",
     "pre-commit": "1.2.2",
     "react-test-renderer": "15.6.1",
+    "react-trigger-change": "^1.0.2",
     "rimraf": "2.6.1",
     "shelljs": "0.7.7",
     "style-loader": "0.18.1",
